@@ -1,30 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX scriptname.patch 353 SHA256 55e64236aa613b6785f7b171c0b1afab2e1759822e3f983de4a06e3903c7c68b SHA512 22264e8d8d7f4fa263fb24ab084f77c99cc7982872603d92395eccc2c7a635a51fdb55795131147f7ff0b94dedb3c43ee5024358123c900e80e9e6e6ee9249f2 WHIRLPOOL 55a2c040796684f2790930665897367ec7c3d1ae187bbb426151c53c6daba1583adc2d5402976c758fe85bc429e565047effebb1b5228123756cd071d573e354
 DIST Fiona-1.1.6.tar.gz 261413 SHA256 9ba0d66ce0e30783904bea629a647a56cc8c47f146ec789aa6b1df1b6827156e SHA512 1976bfb951d5ccd684732357209a269bc359ab3a8118d820098be9228dd5c4c6d234ec8b6cb448ad771d50522b1f1ade782cdadacd092f108a257c16570b9a8f WHIRLPOOL b1fbdbb7a4a11389ae159ab7d517ca59f61243ec20e5e6a3997e4e541e10754ab7632b86dbfb98c8d3ff04193d6031225e845cae665e06a825a14921f2f6252c
 DIST Fiona-1.4.1.tar.gz 280799 SHA256 ca70e563c2eadf791d744084cb38d57ba6f6ece00b62857d3b1dca3f63d1fd29 SHA512 456f875b9bf0f2db7c6f6a34e33ac95ed3031d38f50d04f9af2e02282ba1e3c142a05c6af5be8097b9897083a5fcb74a9184831cb9cf755ee7700451eb005b38 WHIRLPOOL 18fd26d77132609612ba13ad8df8c90b0ff72918aad3464aeaae713b174b0cddcd6106b7d66949fd4a2e819b8157150035783d707e38a73cb81de41959913c22
+DIST Fiona-1.5.1.tar.gz 1117361 SHA256 2e2469190107dc671b4aa05d5b8bed5c01ffeb9de79525c91129bad76915e095 SHA512 06a2f091138b455355aa24bdd3cace48a3ccbbcb8b680f8009862a9ef3bdc217b68ba4596c51caaa9d09d2fad606a581d50f2fc9f2d0636bfec459e2022546a7 WHIRLPOOL 47d274f1755aa875273f1c8b4ce8949fe9a22b237fff90bdf71aa3ff7a6a4a18ff9016ebe3cdf8b323a2d67fa45b6cb8c8e8bfc20c2c57e01df0aa7cf8733330
 EBUILD Fiona-1.1.6.ebuild 764 SHA256 01918027b5d51fef58f420b53fab0da5d62f12d2aa79c7b28e642c310eaaa80e SHA512 e90c6127701604bea9f6d5d0dea96b2150bc61c31b203d07d7a9f69d3b94ec46b99232d8e4cb69179d88026749a97ade24ad16a8fb6ae2963c6f3a27fe91f261 WHIRLPOOL 067c0745e96ab1df6bc190e9f3dd35b1dfa9577ffc47a857da64ff153b549ba815c6969200e52e2bafa27e91b8200a2d8f9642137808372c2bb255bd4ffdad4c
 EBUILD Fiona-1.4.1.ebuild 843 SHA256 26baf50ab331907f1e2d52fdc6641aa5c58315d7b1d0612becb01fe45cd41239 SHA512 c19690788db099661c28b3c5b9f13e5d3e03bc87feeaceb3aa8ff4b271a2cc27d9883a9756bcacc8b0c3f77a87bbe687746d99055d79c6d6b396994b0ca332af WHIRLPOOL 8227116661dba63012633b493e6aa943ea0ab6ca334cbb7d03831f07e446c0cc1740440a43f80cea938f0964b8e53541ac008b6c53168d4bb9e65a98555ea15f
+EBUILD Fiona-1.5.1.ebuild 830 SHA256 b5a771e5593f5a649de89e29935fe5312fdcec112657227d913ff68b017fbda3 SHA512 a67ac32a010b3bcb9d1cf5e2f4f4046b8d327ba0e4598d4222c3868e3b9eadb0907484c9f1557de8b51f4b681fa19b31c8dc32367ef331125419d1a830c8d4d6 WHIRLPOOL 6e6cd675005b1291b14e7fb5723054cfc29faf6996ed263185e1f14096c1f02afeba9ae9824e572e4e49ba8ef9f0e945ef738c822421ae9bd93e4c8b9b20c30e
 EBUILD Fiona-9999.ebuild 808 SHA256 4247649450c424875f003af5f6c53f46255d6781ac71d95c844a55ec6d2acc07 SHA512 4555b78103d0a6273e2c883376358bbc9169f645b89dc35b5315bb9f2ccb1e00f8d07bfcac42e7c8523b134dd35dc0f931b7cff8b8275da753ffba2bad747856 WHIRLPOOL 0d914297be27c68a7edadb6b1a000d6fbee829fdff0432fe4dc0960e026d41561612cfd1b2e67605effd499a74238511e140745cbb2adb3f39cd511040901eab
-MISC ChangeLog 1395 SHA256 f7b99b6d11b163dbdca260d95753867a1b2fa66a7989f10cdadc124325470b78 SHA512 7dde1f99749e9c9d2c32168dc188398578ad371d43d163e79d49059bf6bf89858a464acda7b12d83ae665fa6504591003d89939018c4fb42eb8f43480894ed14 WHIRLPOOL eff802e39d9cb70ae6ffbec33b3e6f889200bba3fd0d4bbedacceaf3cbe7b8de1dbca931e0c10f6b2b4e1f30c9fca453d46118015d9d38c802da5307da4c77ec
+MISC ChangeLog 1505 SHA256 95b6ca4527e6762d24babd4a170adcfb959de2e1fb529beded73c077f1c91de0 SHA512 ae1b40b0d4f7d087d93cbb56566082bceb621dc2922e1ebb6f3bd2846e59817de68da39773008050444a6c47ed805c4244703ef9c9d8fe95f3cc0006576e6102 WHIRLPOOL 201fc4666aa1d3bb8c5553f788c14a4a48a8ebbc3f7663a556de36cc79f496e49b820dbfaac532086a11181a729905d96a98b0f150cbc7d3c21097b04332d9a3
 MISC metadata.xml 205 SHA256 132e3db1188fcdf8aa6467bde8677e24fc63015666de6104a656a5b074932454 SHA512 e53c51c47b6f2ba5302d5fe6ee9524fe49c69d2b03d66aa0a3054185c7c0a83dedeec75ea15424afe22f1423d72c5bbc1c1e07c6bdbdd1912d8eb8e046a4ef58 WHIRLPOOL 5f4c6dfd2f9dae15971877f2eb53c1d9f6196a42dc62b2d95ffd2060f119d7e0794541b3d8ca565f9ca48479325d19864f74a85289c83d5a5e2396f9144d161c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVHop2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirGNkP/37wP9uWKr3I3qCMCeW634sR
-TX7IPybOjStXv09QtSWGOhu4s07bi6CIjPgl0ABbBlR6/GUCRuDZaNhX6q6XAFsC
-ff0w2G2mJQ5vORo4jFmGfvTF+vlTrh0jn6ZCXT0HDGG5CgpBE8EJoOv/yyk0apkW
-vJopjFXrunuH8/bk1d7pcC+1bROh+p7xVFCf8Wl6KU8rE3rjCzZv2Kxb8w8xEdxQ
-FmY2cn+U2qdoNwK+caRm2nvQjQCj3pOSu73Y+bZmukkStrSWWvri+IoaMnOw496v
-umFsEtbXOVDU7yzDpxlYIKX+5Iy4b/aSMH2OUHeCg0Kjk9oFX4UEkHGfrcgTPECB
-vvu5MVZpalo4tjH+zlJoyD6qtIcqJPmlb3VwuLiGvKVuCI2ovcUA5dqZdDolwZAy
-Z83DkefCmkV8bWI79q0a2yzkavW6PCXyFch+CYOh1EDbgskPdGQUdDfXKA39D117
-RehPOW4VU5gsNynC0kPeHU+XaWJx8mS1CPSsx19v/Lb5dEhue1VP6EloYVftbmNF
-inwB9wpV/TO+u4/i5cE+mmuSb9mcZ/IqULr+mqbGWYzWdvNJXCur7XsDStms+lOX
-krP4+LLZkXmZcFYzvj6IzlA2bgBhzgUp8+M01ewDc/+MhByKGubio5/QO3TEODu5
-Q0e518H+QlVuaITgaaSG
-=BUyV
+iQEcBAEBCAAGBQJVL0VcAAoJEO1RxJ84ipLkCoUH+gJoZsPzzxtmTBKv8dGdBLPT
+M9nwAEjhSvCPMGpI0OvIxUEp6i3VWaa8Ght4IzQ61hmk1fwK4hgVg2sDmLf/DABq
+VYZM3Alq4mUrKuoHFD8/fieaGPGoxv0rEeOxqLGXH59JuqbWqaj+mBptkG/Efqyy
+sfZ/sRMlpACwakPLdg2CiZRqVA7xT1J+MrRU5oDTO1ExS42mkjTX937LLYPfEihO
+fGHi9/mOxUi47HB/GA3Nc4fNocUVvvZaM5eSYX1iR4d//yhw1TxVdXN90zeMW8yC
+Gjo433a9vyN+AItCYExvCcSgakNq4FEYpQELd5jOZL1mOd+2FDjBbFBUdZ6Fvjs=
+=V/uc
 -----END PGP SIGNATURE-----
